--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>HW2</title>
   </head>
-  <body style="background-color:#f1c40f;"> 
+  <body style="background-color:#ecf0f1;"> 
     <p><strong>Discuss what makes <i>Zen Garden</i> interesting. Also pick your favorite css design off of the <br />
     site and describe at least one aspect of the layout given the reading that you completed <br />
     for today.  For something extra you could also discuss an effect that was done with CSS that <br />
@@ -17,7 +17,7 @@
         which also makes it interesting for me.<br /></td>
       </tr>
       <tr>
-        <td><b>2.</b>Pick your favorite css design off of the site and describe at least one aspect of the layout given <br />
+        <td><b>2.</b>Pick your favorite css design off of the site and describe<br /> at least one aspect of the layout given <br />
         the reading that you completed for today.</td>
         <td>
         <em>Aspect 1: Border, margin and, padding</em><br />
