--- a/index.html
+++ b/index.html
@@ -1,48 +1,90 @@
 <html>
   <head>
-    <title>HW2</title>
+    <title>HW6</title>
   </head>
-  <body style="background-color:#ecf0f1;"> 
-    <p><strong>Discuss what makes <i>Zen Garden</i> interesting. Also pick your favorite css design off of the <br />
-    site and describe at least one aspect of the layout given the reading that you completed <br />
-    for today.  For something extra you could also discuss an effect that was done with CSS that <br />
-    was not in your book.  (Use w3 schools as a reference for unfamiliar CSS)<br /></strong></p>
+  <style>
+body
+  {
+  background-color: #ecf0f1;
+  padding: 10
+  }
+h1
+  {
+  font-family:monospace;
+  font-size: 20; 
+  border: 5px solid; 
+  border-radius: 5px; 
+  border-color: #2c3e50; 
+  background-color:#3498db; 
+  color: white; 
+  border-color: black;  
+  padding: 10;
+  }
+h2{
+  border: 2px solid; 
+  margin: 7px;
+  padding: 15px; 
+  border-radius: 5px;  
+  text-align:left; 
+  background-color: #2ecc71;
+  font-size: 20;
+  width: 300;
+  }
+p
+  { 
+  border: 2px solid; 
+  margin: 7px;
+  padding: 15px; 
+  border-radius: 5px;   
+  background-color: #2ecc71; 
+  border-color: black;
+  font-size:24 
+  }
+p:hover,h2:hover 
+  {
+  background-color: #a29bfe;
+  text-decoration: none;
+  color: white;
+  }
+a
+    {
+        text-decoration:none;
+        color: inherit;
+    }    
+a:hover
+    {
+        text-decoration:underline;
+        color: white;
+    }      
+           
+</style>
+  <body> 
+    <h1>Use your understanding of what makes a visualization great to find 2 online visualizations. One should be a "great" visualization and the other should be a poor one. (I recommend reading a lot of news articles to find your examples). Analyze both using Cairo's guidelines. Demonstrate why one expands the island of knowledge and why the other one falls short. If you are doing something extra, do not offer more examples. Instead provide specific insight on how to make it better.Finally, present your essay on a webpage with pleasing design that makes it easy to critique the visuals that you have chosen. (submit your link for your web page)</h1>
     <hr />
     <table>
       <tr>
-        <td><b>1.</b>Discussing what makes <i>Zen Garden</i> interesting</td>
-        <td><i>Zen Garden</i>  is interesting because of how differently it employs color Shapes and division of <br />
-        the text to attract your attention, and please your eyes. Furthermore because this site comes in <br />
-        many different versions you get to see all the different ways the webpage could have turned out <br />
-        which also makes it interesting for me.<br /></td>
-      </tr>
-      <tr>
-        <td><b>2.</b>Pick your favorite css design off of the site and describe<br /> at least one aspect of the layout given <br />
-        the reading that you completed for today.</td>
         <td>
-        <em>Aspect 1: Border, margin and, padding</em><br />
-        In the past when studying computer science I had overlooked things like borders and margin and padding. <br />
-        After the reading and seeing how nice the Middle Century Modern looks, I realize that these properties <br />
-        are very helpful for ensuring everything has good spacing on the page as well as simply providing design <br />
-        freedom. Examples in the book you can clearly see how different margin and padding can make a web page look, <br />
-        And with The screen filler template, I see how good a wedpage will look if this is used correctly.<br /> 
-        </td>   
-      </tr>
-      <tr>
-        <td></td>
+            <a href="https://www.npr.org/sections/news/">
+            <h2><b>1.</b> Example 1 : The Good </h2>That is a link, friend</a>
+        </td>
         <td>
-        <em>Aspect 2:Border images</em><br />
-        In the design “Fountain kiss”, Where images are used to create a beautiful area surrounding the divisions <br />
-        on the page. This can be accomplished by declaring a border image in the CSS File and moving it to images file.<br />  
+            <p>
+        NPR's website has a great design on their website. it has greta data visalizations, and informmative infographics that are plesaing to the eye. They communicate information in a pleaseing way, that teases the brain with new question. They have trueful information, anf the site is of course functioal. It is minallistis and beauful in that sence. The site has great insightful and give it to the viewer very well. 
+            </p>
         </td>
       </tr>
       <tr>
-        <td></td>
-        <td>
-        <em>Aspect 3: Rounded corners (Not in the book)</em><br />
-        A simple yet important feature, Rounded Corners can simply be done by adding a border Radius.  
-        </td>
-      </tr>    
+      <td>
+            <a href="http://www.phschool.com/science/biology_place/labbench/lab8/hardwein.html">
+            <h2><b>1.</b> Example 1 : The Bad </h2>That is a link, friend </a>
+      </td>     
+      <td>
+         <p>
+         NPR's website has a great design on their website, The Phschool does not. It just givens the information to the user, without regarde to how they take it.  They communicate information in a less than pleaseing way, that hurts the eye and makes me want to clice off the site.. They have trueful information, and the site is of course functioal but thats not all people(viewers) want to see. 
+             
+         </p> 
+      </td>   
+      </tr>
     </table>
   </body>
 </html>
