--- a/index.html
+++ b/index.html
@@ -59,29 +59,26 @@ a:hover
            
 </style>
   <body> 
-    <h1>Use your understanding of what makes a visualization great to find 2 online visualizations. One should be a "great" visualization and the other should be a poor one. (I recommend reading a lot of news articles to find your examples). Analyze both using Cairo's guidelines. Demonstrate why one expands the island of knowledge and why the other one falls short. If you are doing something extra, do not offer more examples. Instead provide specific insight on how to make it better.Finally, present your essay on a webpage with pleasing design that makes it easy to critique the visuals that you have chosen. (submit your link for your web page)</h1>
+    <h1>Provide a URL where you discuss what is a distribution and describe how the 4 elements of a distribution: level, spread, shape, and outliers can visually describe a distribution.  If you want to do something more, create your own visuals of how these elements can be described.</h1>
     <hr />
     <table>
       <tr>
         <td>
-            <a href="https://www.npr.org/sections/news/">
-            <h2><b>1.</b> Example 1 : The Good </h2>That is a link, friend</a>
+            <p>
+            </p>
         </td>
         <td>
             <p>
-        NPR's website has a great design on their website. it has greta data visalizations, and informmative infographics that are plesaing to the eye. They communicate information in a pleaseing way, that teases the brain with new question. They have trueful information, anf the site is of course functioal. It is minallistis and beauful in that sence. The site has great insightful and give it to the viewer very well. 
             </p>
         </td>
       </tr>
       <tr>
       <td>
-            <a href="http://www.phschool.com/science/biology_place/labbench/lab8/hardwein.html">
-            <h2><b>1.</b> Example 1 : The Bad </h2>That is a link, friend </a>
+
       </td>     
       <td>
          <p>
-         NPR's website has a great design on their website, The Phschool does not. It just givens the information to the user, without regarde to how they take it.  They communicate information in a less than pleaseing way, that hurts the eye and makes me want to clice off the site.. They have trueful information, and the site is of course functioal but thats not all people(viewers) want to see. 
-             
+The center is the place on a distribution where you are able to communicate the mean, median and mode of the date. Thus, the level of the center can allow the data to stand out for the viewer of your distribution. Making the shape steeper draws attention to this part of the graph, or              
          </p> 
       </td>   
       </tr>
