--- a/index.html
+++ b/index.html
@@ -64,12 +64,9 @@ a:hover
     <table>
       <tr>
         <td>
-            <p>
-            </p>
+
         </td>
         <td>
-            <p>
-            </p>
         </td>
       </tr>
       <tr>
@@ -78,8 +75,7 @@ a:hover
       </td>     
       <td>
          <p>
-The center is the place on a distribution where you are able to communicate the mean, median and mode of the date. Thus, the level of the center can allow the data to stand out for the viewer of your distribution. Making the shape steeper draws attention to this part of the graph, or              
-         </p> 
+The center is the place on a distribution where you are able to communicate the mean, median and mode of the date. Thus, the level of the center can allow the data to stand out for the viewer of your distribution. Making the shape steeper draws attention to this part of the graph, or making the shape wide may even out the data in the eyes of the viewer. More on the shape, a symmetrical graph is more able to communicate a balance to the viewer, where a skewed graph leaves much more to interpened but the viewer. On the same hand, the peaks of the distribution also tell the story,  a distribution with one clear peak, unimodal again convey more a concrete point. A Bimodal is up to viewer interpretation. The spread; The IQR can help emphasize the borders of the distribution.         </p> 
       </td>   
       </tr>
     </table>
