--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@ This chapter covers the core of the d3 algorithm. For your prep create a page to
       </td>     
       <td>
          <p>
-The center is the place on a distribution where you are able to communicate the mean, median and mode of the date. Thus, the level of the center can allow the data to stand out for the viewer of your distribution. Making the shape steeper draws attention to this part of the graph, or making the shape wide may even out the data in the eyes of the viewer. More on the shape, a symmetrical graph is more able to communicate a balance to the viewer, where a skewed graph leaves much more to interpened but the viewer. On the same hand, the peaks of the distribution also tell the story,  a distribution with one clear peak, unimodal again convey more a concrete point. A Bimodal is up to viewer interpretation. The spread; The IQR can help emphasize the borders of the distribution.        
+           
+           Select is the part of the code that selects the tag you will be working inside of. Then append it the part that works on trying to add to the end of the existing code, inside of the tags you have selected. The text part, will add a string to the tags you are adding in the code. 
+           
         </p> 
       </td>   
       </tr>
